--- a/src/main/resources/templates/site/footer.html
+++ b/src/main/resources/templates/site/footer.html
@@ -4,7 +4,7 @@
 
     <!-- logo -->
 
-    <h1> <a th:href="@{/}" title="avana LLC"><img th:src="@{http://img.winterchen.com/BF6AC5E5-C8D7-4841-B3ED-9D898586D5FF-9703-0000073B1BF8A7F8_tmp.PNG}" style="width: 66px;" title="Luis" alt="Luis"/></a> </h1>
+    <h1> <a th:href="@{/}" title="avana LLC"><img th:src="@{http://47.107.251.92:8080/images/logo.png}" style="width: 66px;" title="临海听风" alt="Luis"/></a> </h1>
 
 
     <!-- logo -->
@@ -13,9 +13,9 @@
 
     <nav role="footer-nav">
         <ul>
-            <li><a th:href="@{/}" title="Work">Work</a></li>
-            <li><a th:href="@{/about}" title="About">About</a></li>
-            <li><a th:href="@{/blog/index}" title="Blog">Blog</a></li>
+            <li><a th:href="@{/}" title="Work">工作</a></li>
+            <li><a th:href="@{/about}" title="About">关于</a></li>
+            <li><a th:href="@{/blog/index}" title="Blog">博客</a></li>
         </ul>
     </nav>
 
@@ -50,7 +50,7 @@
             </th:block>
         </th:block>
     </ul>
-    <p class="copy-right">&copy; 2018 <th:block th:text="${title}"></th:block></p>
+    <p class="copy-right">&copy; 2019 <th:block th:text="${title}"></th:block></p>
     <th:block th:if="${record != null and record != ''}"><a class="copy-right" th:href="@{http://www.miitbeian.gov.cn/}" th:text="${record}"></a></th:block>
 </footer>
 
