--- a/src/main/resources/templates/site/about.html
+++ b/src/main/resources/templates/site/about.html
@@ -8,7 +8,11 @@
 
 <body>
 
-    
+<i class="icon-music-outer">
+    <i class="forbid icon-music"></i> <!--控制音乐图标-->
+    <audio loop autoplay="autoplay" controls id="bgMusic" src="http://47.107.251.92:8080/music/Jay2.mp3">
+    </audio>
+</i>
 
     	<!-- header -->
 
@@ -33,11 +37,11 @@
 
                     	<header>
 
-                        	<h2><span>Hi! </span> My name is Winter.</h2>
+                        	<h2><span>Hi! </span>欢迎您，我的新朋友！</h2>
 
                         </header>
 
-                        <p>I’m a Java Developer with an enduring interest in Coding and Write Blog</p>
+                        <p>Waiting for you!</p>
 
                     </article>
 
@@ -49,9 +53,12 @@
 
                 	<article class="about-content">
 
-                    	<p>In my free time I enjoy coding, cycling, photography and meeting new people.</p>
-
-                        <p>Want to work together on something? Just Email me . And scan the QR code to add me on WeChat.</p>
+                        <p>行走在热闹的街角</p>
+                        <p>你双脚匆忙，神情略微慌张</p>
+                        <p>手里牵着全家的希望</p>
+                        <p>这些年，你学会了懂得与珍惜，呵护与关爱</p>
+                        <p>沧海桑田，世事变迁</p>
+                        <p>唯一没有变的是你那颗温柔善良纯洁的心</p>
 
                     </article>
 
