--- a/src/main/resources/templates/site/contact.html
+++ b/src/main/resources/templates/site/contact.html
@@ -78,11 +78,11 @@
 
                         <ul>
 
-                            <li><a href="index.html" title="Work">Work</a></li>
+                            <li><a href="index.html" title="Work">工作</a></li>
 
-                            <li><a href="about.html" title="About">About</a></li>
+                            <li><a href="about.html" title="About">关于</a></li>
 
-                            <li><a href="blog.html" title="Blog">Blog</a></li>
+                            <li><a href="blog.html" title="Blog">博客</a></li>
 
                             <li class="nav-active"><a href="contact.html" title="Contact">Contact</a></li>
 
@@ -212,11 +212,11 @@
 
             	<ul>
 
-                	<li><a href="index.html" title="Work">Work</a></li>
+                	<li><a href="index.html" title="Work">工作</a></li>
 
-                    <li><a href="about.html" title="About">About</a></li>
+                    <li><a href="about.html" title="About">关于</a></li>
 
-                    <li><a href="blog.html" title="Blog">Blog</a></li>
+                    <li><a href="blog.html" title="Blog">博客</a></li>
 
                     <li><a href="contact.html" title="Contact">Contact</a></li>
 
