--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -4,23 +4,27 @@
 <div th:replace="site/head::head(${commons.site_title()},${commons.google_site_verification()}, ${commons.baidu_site_verification()})"></div>
 
 <body>
+<i class="icon-music-outer">
+    <i class="forbid icon-music"></i> <!--控制音乐图标-->
+    <audio loop autoplay="autoplay" controls id="bgMusic" src="http://47.107.251.92:8080/music/Jay0.mp3">
+    </audio>
+</i>
 
 <!-- header -->
 
 <div th:replace="site/header::header"></div>
 
-<!-- header --> 
+<!-- header -->
 
 <!-- main -->
-
 <main role="main-home-wrapper" class="container">
   <div class="row">
     <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
       <article role="pge-title-content">
         <header>
-          <h2><span>Luis</span> A Java Developer.</h2>
+          <h2><span>临海听风</span> Magic home </h2>
         </header>
-        <p>maker of things for the web app, always focused on elegant simplicity, relentlessly learning by making mistakes.</p>
+        <p>聆听你的声音</p>
       </article>
     </section>
     <th:block th:each="archive,archiveStat : ${archives.list}">
@@ -82,4 +86,5 @@
 <div th:replace="site/footer::footer(${commons.site_title()},${commons.site_record()},${commons.site_url()})"></div>
 
 </body>
+
 </html>
