--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -6,7 +6,7 @@
 <body>
 <i class="icon-music-outer">
     <i class="forbid icon-music"></i> <!--控制音乐图标-->
-    <audio loop autoplay="autoplay" controls id="bgMusic" src="http://47.107.251.92:8080/music/Jay0.mp3">
+    <audio loop autoplay="autoplay" controls id="bgMusic" src="http://47.107.251.92:8081/music/Jay0.mp3">
     </audio>
 </i>
 
@@ -24,7 +24,7 @@
         <header>
           <h2><span>临海听风</span> Magic home </h2>
         </header>
-        <p>聆听你的声音</p>
+        <p>忙里偷闲，聆听你的声音</p>
       </article>
     </section>
     <th:block th:each="archive,archiveStat : ${archives.list}">
