--- a/src/main/resources/templates/site/header.html
+++ b/src/main/resources/templates/site/header.html
@@ -79,7 +79,7 @@
 
         <!-- logo -->
 
-        <h1> <a th:href="@{/}" title="avana LLC"><img th:src="@{http://47.107.251.92:8081/images/logo.png}" style="width: 66px;" title="avana LLC" alt="avana LLC"/></a> </h1>
+        <h1> <a th:href="@{/}" title="avana LLC"><img th:src="@{images/logo.png}" style="width: 66px;" title="avana LLC" alt="avana LLC"/></a> </h1>
 
         <!-- logo -->
 
