Revert "修改配置文件"
This reverts commit b1c7cfdf0ded66f13420ad9cbc995905d78f2194.

--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -6,7 +6,7 @@
 <body>
 <i class="icon-music-outer">
     <i class="forbid icon-music"></i> <!--控制音乐图标-->
-    <audio loop controls id="bgMusic" src="music/Jay0.mp3">
+    <audio loop controls id="bgMusic" src="http://47.107.251.92:8081/music/Jay0.mp3">
     </audio>
 </i>
 
