--- a/src/main/resources/templates/site/footer.html
+++ b/src/main/resources/templates/site/footer.html
@@ -4,7 +4,7 @@
 
     <!-- logo -->
 
-    <h1> <a th:href="@{/}" title="avana LLC"><img th:src="@{images/logo.png}" style="width: 66px;" title="临海听风" alt="Luis"/></a> </h1>
+    <h1> <a th:href="@{/}" title="avana LLC"><img th:src="@{http://47.107.251.92:8081/images/logo.png}" style="width: 66px;" title="临海听风" alt="Luis"/></a> </h1>
 
 
     <!-- logo -->
